add sflow ingestion example

--- a/sflow_ingestion/sflow-pipeline.conf
+++ b/sflow_ingestion/sflow-pipeline.conf
@@ -5,15 +5,24 @@ input {
   }
 }
 
+filter {
+    geoip {
+        source => "src_ip"
+        target => "src_geoip"
+    }
+    geoip {
+        source => "dst_ip"
+        target => "dst_geoip"
+    }
+}
+
 output {
-  stdout {
-    codec => rubydebug
-  }
   opensearch {
-    hosts => ["${OPENSEARCH_HOST}"]
+    hosts => ["${OPENSEARCH_HOST1}", "${OPENSEARCH_HOST2}", "${OPENSEARCH_HOST3}"]
     index => "sflow-datastream"
     user => "${OPENSEARCH_USER}"
     password => "${OPENSEARCH_PASSWORD}"
     ssl_certificate_verification => false
+    action => "create"
   }
 }
